--- a/script/Sector_Models/Telecommunication Sector Model.ipynb
+++ b/script/Sector_Models/Telecommunication Sector Model.ipynb
@@ -263,7 +263,7 @@
    ],
    "source": [
     "# load 10 year treasury rate\n",
-    "quandl.ApiConfig.api_key = \"91nyd8SyzTFzVtMSfKPJ\" #apply a quandl api key\n",
+    "quandl.ApiConfig.api_key = \"xxxxxxxxxxxxx\" #apply a quandl api key\n",
     "\n",
     "treasury = quandl.get(\"FRED/DGS10\")\n",
     "treasury.head()"
