--- a/script/Overall model Ensemble/Ensemble-model.ipynb
+++ b/script/Overall model Ensemble/Ensemble-model.ipynb
@@ -135,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# systematically change n to minimize error metric and observe forecast plot\n",
+    "# systematically change n (0 < n < 1) to minimize error metric and observe forecast plot\n",
     "EN07 = generate_Ensemble(ST07, LTsec, 6, 0.6)\n",
     "EN08 = generate_Ensemble(ST08, LTsec, 7, 0.5)\n",
     "EN09 = generate_Ensemble(ST09, LTsec, 8, 0.5)\n",
